objects/Product2.object
<CustomObject>
    <fields>
        <fullName>TM_Core_Treasury_Product__c</fullName>
        <label>Core Treasury Products</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TM_Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_Product_Line__c</fullName>
        <description>Treasury Solutions</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Treasury Solutions</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Product_Type_Treasury__c</fullName>
        <description>This will be used for Product Type Treasury</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type Treasury</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TM_Product_Line__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit Solutions</fullName>
                </value>
                <value>
                    <fullName>Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Payable Solutions</fullName>
                </value>
                <value>
                    <fullName>Receivable Solutions</fullName>
                </value>
                <value>
                    <fullName>Liquidity Solutions</fullName>
                </value>
                <value>
                    <fullName>Fraud Solutions</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Treasury Deposits</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Public Funds</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
                <value>
                    <fullName>IRAs</fullName>
                </value>
                <value>
                    <fullName>HSAs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TM_Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Checking</fullName>
                </value>
                <value>
                    <fullName>Community Checking</fullName>
                </value>
                <value>
                    <fullName>Small Business Checking</fullName>
                </value>
                <value>
                    <fullName>Public Funds Non-Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>Public Funds Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>CDARS</fullName>
                </value>
                <value>
                    <fullName>ICS</fullName>
                </value>
                <value>
                    <fullName>Repurchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Multi User</fullName>
                </value>
                <value>
                    <fullName>EDI Addenda Translation</fullName>
                </value>
                <value>
                    <fullName>BAI File Download</fullName>
                </value>
                <value>
                    <fullName>BAI SFTP</fullName>
                </value>
                <value>
                    <fullName>ACH Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Third Party Sender</fullName>
                </value>
                <value>
                    <fullName>Wire Transmission</fullName>
                </value>
                <value>
                    <fullName>Business BillPay</fullName>
                </value>
                <value>
                    <fullName>Credit Card Small Business</fullName>
                </value>
                <value>
                    <fullName>Credit Card Corporate</fullName>
                </value>
                <value>
                    <fullName>Credit Card Purchasing</fullName>
                </value>
                <value>
                    <fullName>RDC Low-Speed Scanner</fullName>
                </value>
                <value>
                    <fullName>RDC Hi-Speed Scanner</fullName>
                </value>
                <value>
                    <fullName>RDC Mobile</fullName>
                </value>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Payment Portal U-Pay</fullName>
                </value>
                <value>
                    <fullName>Payment Portal Autobooks</fullName>
                </value>
                <value>
                    <fullName>Payment Portal I-Collect</fullName>
                </value>
                <value>
                    <fullName>Lockbox Remote</fullName>
                </value>
                <value>
                    <fullName>Lockbox Retail</fullName>
                </value>
                <value>
                    <fullName>Lockbox Healthcare</fullName>
                </value>
                <value>
                    <fullName>Single Sweep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>TM_Product_Type__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Treasury_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DISPLAY_URL</columns>
        <filterScope>Everything</filterScope>
        <label>Treasury Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>